# pcaptain

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  READMEbyEric.md  REFACTOR_NOTE.md  docker-compose.yml  main.py  pcaps  questions.md  requirements.txt
backend/: Dockerfile  main.py  requirements.txt
backend/api/: scan.py  search.py
backend/config/: config.yaml  entrypoint.sh
backend/models/: catalog.py  scan_options.py
backend/routes/: alerts.py  analysis.py  catalog_backfill.py  catalog_endpoints.py  catalog_health.py  catalog_index.py  catalog_ops.py  catalog_query.py  catalog_stats.py  catalog_webhooks.py  dashboard.py  pcaps.py  protocols.py  scan.py  search.py
backend/services/: alerts.py  analysis.py  capture_info.py  catalog_constants.py  catalog_ops_folders.py  catalog_query.py  catalog_stats.py  config.py  context.py  dashboard_cache.py  duplicate_detect.py  endpoint_compare.py  endpoint_extract.py  endpoint_index.py  fastscan_options.py  health_dashboard.py  (+12 more)
config/: config.py  config.yaml
docs/: PULL_REQUESTS.md
fast_scan/: .gitignore  CMakeLists.txt  README.md  fast_scan.cpp  ports.overlay.example
fast_scan/lib/: inference.hpp  output.hpp  proto_path.hpp  scan_accumulator.hpp  scan_settings.hpp  scanner.hpp
fast_scan/src/: inference.cpp  scan_accumulator.cpp  scanner.cpp
frontend/: Dockerfile
pcaps/: fake_camel.pcap  test1.txt
routes/: search.py
scripts/: benchmark_scan.sh  compare_endpoints_fastscan_tshark.py  docker_api_benchmark.py
services/: scan.py
tools/: README.md  corrupt_generator.py
(+49 files in other folders)
